Finished explore function backend (it works)

--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,2 @@
-SECRET_KEY='mb\x84\x14\xd7[p\xfa\xae\x93\xdf|4\x9f\x17\xbap\x9e\xdc:\xacf\x03\xab'
-EKATA_API_KEY="9be4268ed5574d3392f9bcbae3a6413c"
-DATABASE_URL="postgresql://postgres:v1b1ngg00d@localhost/open-addresses"
+SECRET_KEY='\xec\x8f\xb6\xec\x0f\x93\x1fC\xafrS7\x82\x02\xabM\xee_\xd3\xafGX\x05\xb6'
+DATABASE_URL="postgresql://postgres:v1b1ngg00d@localhost/sclean"
