--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,2 @@
-SECRET_KEY="u\xee0\x7f'\xf7\r\xa1?mK-\x0e\x15w\xf3T\x87\xfc\xd0\xbb\xca\xc4\xa0"
-DATABASE_URL="postgresql://postgres:v1b1ngg00d@localhost/sclean"
+SECRET_KEY='\xf8km^+VT|\xd2\xa2\xd2\xae\xe9\xe4\xce\x7f\xb4w-\xec[=\xba\x92'
+DATABASE_URL="postgresql://postgres:CTWEmpire@localhost/sclean"
