update password and key url, in addition to fixing some code

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,2 @@
-SECRET_KEY='\xf8km^+VT|\xd2\xa2\xd2\xae\xe9\xe4\xce\x7f\xb4w-\xec[=\xba\x92'
-DATABASE_URL="postgresql://postgres:CTWEmpire@localhost/sclean"
+SECRET_KEY='f\xf3\xc1\xc9\x08\xb9\xc0\x1c\xee\x9ee\xa6C\xa2\x84\xeeD8)j\xdc&\xc1`'
+DATABASE_URL="postgresql://postgres:sk8b33st@localhost/sclean"
