--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# profile specific static files
+static/profiles/users/*
+static/profiles/groups/*
+static/profiles/projects/*
+
 # C extensions
 *.so
 
