--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,86 @@
-aiodns==2.0.0
-aiohttp==3.6.2
-async-timeout==3.0.1
-attrs==19.1.0
-beautifulsoup4==4.9.1
-certifi==2020.6.20
-cffi==1.14.0
-cfscrape==2.1.1
-chardet==3.0.4
-cloudscraper==1.2.42
-fake-useragent==0.1.11
+alembic==1.4.3
+appdirs==1.4.4
+attrs==20.3.0
+awscli==1.18.213
+base58==2.1.0
+bitarray==1.2.2
+blinker==1.4
+boto3==1.16.53
+botocore==1.19.53
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.3
+cryptography==3.2.1
+cytoolz==0.11.0
+distlib==0.3.1
+docutils==0.15.2
+eth-abi==2.1.1
+eth-account==0.5.4
+eth-hash==0.3.1
+eth-keyfile==0.5.1
+eth-keys==0.3.3
+eth-rlp==0.2.1
+eth-typing==2.2.2
+eth-utils==1.10.0
+filelock==3.0.12
+Flask==1.1.2
+Flask-HTTPAuth==4.2.0
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.4
+geographiclib==1.50
+geopy==2.1.0
+gunicorn==20.0.4
+hexbytes==0.2.1
+httpie==2.3.0
 idna==2.10
-install==1.3.3
-lxml==4.5.2
-maxminddb==1.5.4
-multidict==4.7.6
-proxybroker==0.3.2
-pycares==3.1.1
+ipfshttpclient==0.7.0a1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+jsonschema==3.2.0
+lru-dict==1.1.7
+Mako==1.1.3
+MarkupSafe==1.1.1
+multiaddr==0.0.9
+netaddr==0.8.0
+numpy==1.19.5
+pandas==1.2.0
+parsimonious==0.8.1
+Pillow==8.1.0
+pipenv==2018.11.26
+protobuf==3.15.5
+psycopg2==2.8.6
+pyasn1==0.4.8
 pycparser==2.20
-pyparsing==2.4.7
-pyperclip==1.8.0
-requests==2.24.0
+pycryptodome==3.10.1
+pygame==2.0.0
+Pygments==2.7.4
+PyJWT==2.0.1
+pypiwin32==223
+pyrsistent==0.17.3
+PySocks==1.7.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-editor==1.0.4
+pytz==2020.5
+pywin32==300
+PyYAML==5.3.1
+requests==2.25.1
 requests-toolbelt==0.9.1
-soupsieve==2.0.1
-urllib3==1.25.9
-yarl==1.4.2
+rlp==2.0.1
+rsa==4.5
+s3transfer==0.3.4
+six==1.15.0
+SQLAlchemy==1.3.22
+toolz==0.11.1
+urllib3==1.26.2
+varint==1.0.2
+virtualenv==20.2.2
+virtualenv-clone==0.5.4
+web3==5.17.0
+websockets==8.1
+Werkzeug==1.0.1
