--- a/Pipfile
+++ b/Pipfile
@@ -66,7 +66,6 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 pytz = "==2020.5"
 "pywin32" = "==300"
-pyyaml = "==5.3.1"
 requests = "==2.25.1"
 requests-toolbelt = "==0.9.1"
 rlp = "==2.0.1"
@@ -95,6 +94,7 @@ PyJWT = "==2.0.1"
 PySocks = "==1.7.1"
 SQLAlchemy = "==1.3.22"
 Werkzeug = "==1.0.1"
+PyYAML = "==5.3.1"
 
 [requires]
 python_version = "3.7"
