--- a/Pipfile
+++ b/Pipfile
@@ -51,7 +51,7 @@ lru-dict = "==1.1.7"
 multiaddr = "==0.0.9"
 netaddr = "==0.8.0"
 numpy = "==1.19.5"
-pandas = "==1.2.0"
+pandas = "==1.3.4"
 parsimonious = "==0.8.1"
 pipenv = "==2018.11.26"
 protobuf = "==3.15.5"
@@ -60,7 +60,7 @@ protobuf = "==3.15.5"
 pycparser = "==2.20"
 pycryptodome = "==3.10.1"
 pygame = "==2.0.0"
-pypiwin32 = "==223"
+pypiwin32 = ">=223"
 pyrsistent = "==0.17.3"
 python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
@@ -95,4 +95,4 @@ Werkzeug = "==1.0.1"
 PyYAML = "==5.3.1"
 
 [requires]
-python_version = "3.9"
+python_version = "3.7.2"
