--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ numpy==1.19.5
 pandas==1.2.0
 parsimonious==0.8.1
 Pillow==8.1.0
-pipenv==2018.11.26
+pipenv==2021.5.29
 protobuf==3.15.5
 psycopg2==2.8.6
 pyasn1==0.4.8
@@ -67,6 +67,7 @@ python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 pytz==2020.5
+pywin32==301
 PyYAML==5.3.1
 requests==2.25.1
 requests-toolbelt==0.9.1
