--- a/Pipfile
+++ b/Pipfile
@@ -1,96 +1,28 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
+name = "pypi"
+
+[packages]
+alembic = "==1.8.1"
+boto3 = "==1.26.27"
+botocore = "==1.29.27"
+flask = "==2.2.2"
+flask-httpauth = "==4.7.0"
+flask-login = "==0.6.2"
+flask-mail = "==0.9.1"
+flask-migrate = "==4.0.0"
+flask-sqlalchemy = "==3.0.2"
+geopy = "==2.3.0"
+pillow = "==9.3.0"
+python-dotenv = "==0.21.0"
+python-dateutil = "==2.8.2"
+requests = "==2.28.1"
+sqlalchemy = "==1.4.45"
+werkzeug = "==2.2.2"
 
 [dev-packages]
 
-[packages]
-gunicorn = "==20.0.4"
-python-dotenv = "==0.15.0"
-geopy = "==2.1.0"
-airbnb = "*"
-folium = "*"
-earthengine-api = "*"
-alembic = "==1.4.3"
-appdirs = "==1.4.4"
-attrs = "==20.3.0"
-awscli = "==1.18.213"
-"base58" = "==2.1.0"
-bitarray = "==1.2.2"
-blinker = "==1.4"
-"boto3" = "==1.16.53"
-botocore = "==1.19.53"
-certifi = "==2020.12.5"
-cffi = "==1.14.4"
-chardet = "==4.0.0"
-click = "==7.1.2"
-colorama = "==0.4.3"
-cryptography = "==3.2.1"
-cytoolz = "==0.11.0"
-distlib = "==0.3.1"
-docutils = "==0.15.2"
-eth-abi = "==2.1.1"
-eth-account = "==0.5.4"
-eth-hash = "==0.3.1"
-eth-keyfile = "==0.5.1"
-eth-keys = "==0.3.3"
-eth-rlp = "==0.2.1"
-eth-typing = "==2.2.2"
-eth-utils = "==1.10.0"
-filelock = "==3.0.12"
-geographiclib = "==1.50"
-hexbytes = "==0.2.1"
-httpie = "==2.3.0"
-idna = "==2.10"
-ipfshttpclient = "==0.7.0a1"
-itsdangerous = "==1.1.0"
-jmespath = "==0.10.0"
-jsonschema = "==3.2.0"
-lru-dict = "==1.1.7"
-multiaddr = "==0.0.9"
-netaddr = "==0.8.0"
-numpy = "==1.19.5"
-pandas = "==1.3.4"
-parsimonious = "==0.8.1"
-pipenv = "==2018.11.26"
-protobuf = "==3.15.5"
-"psycopg2" = "==2.8.6"
-"pyasn1" = "==0.4.8"
-pycparser = "==2.20"
-pycryptodome = "==3.10.1"
-pyrsistent = "==0.17.3"
-python-dateutil = "==2.8.1"
-python-editor = "==1.0.4"
-pytz = "==2020.5"
-requests = "==2.25.1"
-requests-toolbelt = "==0.9.1"
-rlp = "==2.0.1"
-rsa = "==4.5"
-"s3transfer" = "==0.3.4"
-six = "==1.15.0"
-toolz = "==0.11.1"
-"urllib3" = "==1.26.2"
-varint = "==1.0.2"
-virtualenv = "==20.2.2"
-virtualenv-clone = "==0.5.4"
-websockets = "==8.1"
-Flask = "==1.1.2"
-Flask-SQLAlchemy = "==2.4.4"
-Flask-Migrate = "==2.5.3"
-Pillow = "==8.1.0"
-Flask-HTTPAuth = "==4.2.0"
-Flask-Login = "==0.5.0"
-Flask-Mail = "==0.9.1"
-"Jinja2" = "==2.11.2"
-Mako = "==1.1.3"
-MarkupSafe = "==1.1.1"
-Pygments = "==2.7.4"
-PyJWT = "==2.0.1"
-PySocks = "==1.7.1"
-SQLAlchemy = "==1.3.22"
-Werkzeug = "==1.0.1"
-PyYAML = "==5.3.1"
-
 [requires]
-python_version = "3.10"
+python_version = "3.11"
+python_full_version = "3.11.1"
