--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ python-dateutil = "==2.8.2"
 requests = "==2.28.1"
 sqlalchemy = "==1.4.45"
 werkzeug = "==2.2.2"
+gunicorn = "==20.1.0"
 
 [dev-packages]
 
