--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,23 @@ requests = "==2.28.1"
 sqlalchemy = "==1.4.45"
 werkzeug = "==2.2.2"
 gunicorn = "==20.1.0"
+blinker = "==1.5"
+certifi = "==2022.12.7"
+charset-normalizer = "==2.1.1"
+click = "==8.1.3"
+colorama = "==0.4.6"
+geographiclib = "==2.0"
+greenlet = "==2.0.1"
+idna = "==3.4"
+itsdangerous = "==2.1.2"
+jinja2 = "==3.1.2"
+jmespath = "==1.0.1"
+mako = "==1.2.4"
+markupsafe = "==2.1.1"
+psycopg2 = "==2.9.5"
+s3transfer = "==0.6.0"
+six = "==1.16.0"
+urllib3 = "==1.26.13"
 
 [dev-packages]
 
