--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
 alembic==1.8.1
+blinker==1.5
 boto3==1.26.27
 botocore==1.29.27
+certifi==2022.12.7
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
 Flask==2.2.2
-Flask_HTTPAuth==4.7.0
-Flask_Login==0.6.2
-Flask_Mail==0.9.1
-Flask_Migrate==4.0.0
-flask_sqlalchemy==3.0.2
+Flask-HTTPAuth==4.7.0
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.0
+Flask-SQLAlchemy==3.0.2
+geographiclib==2.0
 geopy==2.3.0
-Pillow==9.3.0
-python-dotenv==0.21.0
-python_dateutil==2.8.2
-requests==2.28.1
-SQLAlchemy==1.4.45
-Werkzeug==2.2.2
+greenlet==2.0.1
 gunicorn==20.1.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+Mako==1.2.4
+MarkupSafe==2.1.1
+Pillow==9.3.0
+psycopg2==2.9.5
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+requests==2.28.1
+s3transfer==0.6.0
+six==1.16.0
+SQLAlchemy==1.4.45
+urllib3==1.26.13
+Werkzeug==2.2.2
