--- a/Pipfile
+++ b/Pipfile
@@ -7,39 +7,25 @@ name = "pypi"
 alembic = "==1.8.1"
 boto3 = "==1.26.27"
 botocore = "==1.29.27"
+brownie = "==0.5.1"
+eth-abi = "==2.2.0"
 flask = "==2.2.2"
 flask-httpauth = "==4.7.0"
 flask-login = "==0.6.2"
 flask-mail = "==0.9.1"
 flask-migrate = "==4.0.0"
-flask-sqlalchemy = "==3.0.2"
+flask-sqlalchemy = "==3.0.3"
 geopy = "==2.3.0"
-pillow = "==9.3.0"
-python-dotenv = "==0.21.0"
-python-dateutil = "==2.8.2"
-requests = "==2.28.1"
+pillow = "==9.5.0"
+pytest = "==6.2.5"
+python-dotenv = "==1.0.0"
+python-dateutil = "==2.8.1"
+requests = "==2.29.0"
 sqlalchemy = "==1.4.45"
+web3 = "==5.31.3"
 werkzeug = "==2.2.2"
-gunicorn = "==20.1.0"
-blinker = "==1.5"
-certifi = "==2022.12.7"
-charset-normalizer = "==2.1.1"
-click = "==8.1.3"
-colorama = "==0.4.6"
-geographiclib = "==2.0"
-greenlet = "==2.0.1"
-idna = "==3.4"
-itsdangerous = "==2.1.2"
-jinja2 = "==3.1.2"
-jmespath = "==1.0.1"
-mako = "==1.2.4"
-markupsafe = "==2.1.1"
-psycopg2 = "==2.9.5"
-s3transfer = "==0.6.0"
-six = "==1.16.0"
-urllib3 = "==1.26.13"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.10.11"
